# kondoo

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
example/example_bot/: Containerfile  compose.yaml  personality.txt
example/example_bot/docs/: docs.txt
src/kondoo/: app.py
