[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kondoo"
version = "0.1.3"
authors = [
  { name="Luis Pereida", email="luis.pereida@sysadminctl.services" },
]
description = "A flexible, self-hosted RAG chatbot framework for containerized deployments."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
    "flask",
    "python-dotenv",
    "google-generativeai",
    "llama-index",
    "llama-index-llms-gemini",
    "llama-index-llms-openai",
    "llama-index-llms-openai-like",
    "llama-index-embeddings-ollama",
    "llama-index-embeddings-huggingface",
    "llama-index-embeddings-openai"
]

[project.classifiers]
Development Status :: 3 - Alpha
Intended Audience :: Developers
Topic :: Scientific/Engineering :: Artificial Intelligence
Topic :: Software Development :: Libraries :: Python Modules
Topic :: Communications :: Chat
License :: OSI Approved :: MIT License
Programming Language :: Python :: 3
Programming Language :: Python :: 3.9
Programming Language :: Python :: 3.10
Programming Language :: Python :: 3.11
Operating System :: OS Independent

[project.urls]
Homepage = "https://github.com/sysadminctl-services/kondoo"
Repository = "https://github.com/sysadminctl-services/kondoo"
Bug Tracker = "https://github.com/sysadminctl-services/kondoo/issues"

[tool.setuptools.packages.find]
where = ["src"]